<resources>
    <string name="app_name">NatCash</string>
    <string name="background_screen">Background Screen</string>
    <string name="account_field">Enter your account</string>
    <string name="login_button">Login</string>
    <string name="touch_id">Face ID/Finger ID</string>
    <string name="register">Already have an account?</string>
    <string name="face_id_button">face_id</string>
    <string name="sign_up">Sign up</string>
    <string name="skip_now">Skip now</string>
    <string name="upgrade">Upgrade</string>
    <string name="notification">notification</string>
    <string name="avatar">avatar</string>
    <string name="notiimg">notiImg</string>
    <string name="bell">bell</string>
    <string name="upgrade_to_gold">Upgrade to Gold</string>
    <string name="go">Go</string>
    <string name="courtney_henry">Courtney Henry</string>
    <string name="view_balance">View Balance</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="banking">Banking</string>
    <string name="my_qr">My QR</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="view_all_services">View all services</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="service_payment">Service Payment</string>
    <string name="top_up">Top-up</string>
    <string name="data">Data</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="electricity">Electricity</string>
    <string name="water">Water</string>
    <string name="hot_deal">Hot Deal</string>
    <string name="big_voucher">Big Voucher</string>
    <string name="promotion">Promotion</string>
    <string name="home">Home</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string-array name="promotion">
        <item>Attractive promotion from Lumicash %10</item>
        <item>NEW promotion x2 Benefit</item>
        <item>NEW promotion x2 Benefit</item>
        <item>NEW promotion x2 Benefit</item>
        <item>NEW promotion x2 Benefit</item>
    </string-array>

    <string-array name="on_boarding_title">
        <item>Super utility</item>
        <item>Easy and safe</item>
        <item>Super promotions</item>
    </string-array>

    <string-array name="on_boarding_description">
        <item>Easy to use, high security, support multiple platforms. Payment, transfer money anytime, anywhere !</item>
        <item>Easy to pay Electricity Bill, Water Supply and Microfinance services</item>
        <item>Topup, Pincode discount up to 10%. Have chance to get cashback up to 100%. More payment, more saving!</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started!</string>

</resources>