<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="348dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/login_background" />

        <ImageView
            android:id="@+id/appName"
            android:layout_width="172dp"
            android:layout_height="40dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="377dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="49dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/app_name" />

        <Button
            android:id="@+id/skip_button"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:layout_marginStart="272dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="380dp"
            android:background="@drawable/skip_button"
            android:backgroundTint="@color/skip_btn_color"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/skip_now"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/accounField"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:layout_marginTop="445dp"
        android:background="@drawable/layout_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="343dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="292dp"
            android:autofillHints="username"
            android:background="@drawable/round_corner_edit_text"
            android:ems="10"
            android:hint="@string/account_field"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="231dp"
            android:background="@drawable/login_button"
            android:onClick="login"
            android:text="@string/login_button"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="63dp"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="144dp"
            android:fontFamily="sans-serif"
            android:text="@string/touch_id"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:lineHeight="24dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="229dp"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="131dp"
            android:background="@color/white"
            android:contentDescription="@string/face_id_button"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/face_id"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="227dp"
            android:layout_height="24dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="284dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="61dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textAlignment="viewEnd"
                android:textColor="#F28230"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/instruction"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>