<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeScreen" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInformation"
        android:layout_width="match_parent"
        android:layout_height="358dp"
        android:backgroundTint="#5C040404"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="324dp"
            android:layout_marginBottom="273dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar"
            tools:ignore="ImageContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="102dp"
            android:layout_height="32dp"
            android:layout_marginStart="214dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="59dp"
            android:layout_marginBottom="275dp"
            android:background="@drawable/upgrade_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/upgrade"
                android:layout_width="20dp"
                android:layout_height="14dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="9dp"
                android:contentDescription="@string/notiimg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/upgrade_img"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/upgrade_text"
                android:layout_width="51dp"
                android:layout_height="24dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/upgrade"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/notiLayout"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="322dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="274dp"
            android:background="@drawable/notification_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/notiBtn"
                android:layout_width="13.65dp"
                android:layout_height="17.55dp"
                android:adjustViewBounds="true"
                android:background="@drawable/notification_layout"
                android:contentDescription="@string/bell"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/noti"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upgradeToGold"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="218dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/golden_crown"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="331dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/golden_crown" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="114dp"
                android:layout_height="24dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="212dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:lineHeight="24dp"
                android:text="@string/upgrade_to_gold"
                android:textColor="@android:color/holo_orange_light"
                android:textFontWeight="600"
                android:textSize="14sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="p" />

            <Button
                android:id="@+id/goBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/go_btn_layout"
                android:fontFamily="sans-serif"
                android:text="@string/go"
                android:textColor="#FFB800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="206dp"
            android:layout_marginBottom="292dp"
            android:fontFamily="sans-serif"
            android:lineHeight="16dp"
            android:text="@string/courtney_henry"
            android:textColor=" #263238"
            android:textFontWeight="700"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.666"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="59dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="226dp"
            android:layout_marginBottom="274dp"
            android:fontFamily="sans-serif"
            android:text="(229) 555-0109"
            android:textColor="#263238"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>